--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW2_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW2_on_conflict_do_update.yaml
@@ -10,7 +10,7 @@ loaderThreads: 1
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
-yaml_version: v1.0
+yaml_version: v1.1
 works:
     work:
         time_secs: 180
@@ -24,7 +24,7 @@ microbenchmark:
             - DROP TABLE IF EXISTS accounts_1;
             - CREATE TABLE IF NOT EXISTS accounts_1(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1));
             - CREATE UNIQUE INDEX user_accounts_1 ON accounts_1( user_id_1, account_id_1);
-            - CREATE UNIQUE INDEX user_accounts_2 ON accounts_1( user_id_1, account_id_1, user_id_1, bal_1);
+            - CREATE UNIQUE INDEX user_accounts_2 ON accounts_1( user_id_1, account_id_1, addr_1, bal_1);
 
         cleanup:
             - DROP TABLE IF EXISTS accounts_1;
@@ -85,13 +85,13 @@ microbenchmark:
                               -   util: PrimaryFloatGen
                                   params: [ 1000000, 2000000, 2 ]
 
-            - workload: CW2_3_2column_condition_10_upsert
+            - workload: CW2_3_2column_condition_1024_upsert
               run:
                   - name: statement1_insert
                     weight: 100
                     queries:
                         - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
-                          count: 10
+                          count: 1024
                           bindings:
                               -   util: PrimaryIntGen
                                   params: [ 2000000, 3000000 ]
@@ -102,13 +102,13 @@ microbenchmark:
                               -   util: PrimaryFloatGen
                                   params: [ 2000000, 3000000, 2 ]
 
-            - workload: CW2_4_4column_condition_10_upsert
+            - workload: CW2_4_2column_condition_2048_upsert
               run:
                   - name: statement1_insert
                     weight: 100
                     queries:
-                        - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1, user_id_1, bal_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
-                          count: 10
+                        - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
+                          count: 2048
                           bindings:
                               -   util: PrimaryIntGen
                                   params: [ 3000000, 4000000 ]
