--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW2_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW2_on_conflict_do_update.yaml
@@ -73,16 +73,16 @@ microbenchmark:
                   - name: statement1_insert
                     weight: 100
                     queries:
-                        - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1, user_id_1, bal_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
+                        - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1, addr_1, bal_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 1000000, 2000000 ]
+                                  params: [ 1000001, 2000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 1000000, 2000000 ]
+                                  params: [ 1000001, 2000000 ]
                               -   util: PrimaryStringGen
-                                  params: [ 1000000, 50 ]
+                                  params: [ 1000001, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 1000000, 2000000, 2 ]
+                                  params: [ 1000001, 2000000, 2 ]
 
             - workload: CW2_3_2column_condition_1024_upsert
               run:
@@ -93,13 +93,13 @@ microbenchmark:
                           count: 1024
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 2000000, 3000000 ]
+                                  params: [ 2000001, 3000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 2000000, 3000000 ]
+                                  params: [ 2000001, 3000000 ]
                               -   util: PrimaryStringGen
-                                  params: [ 2000000, 50 ]
+                                  params: [ 2000001, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 2000000, 3000000, 2 ]
+                                  params: [ 2000001, 3000000, 2 ]
 
             - workload: CW2_4_2column_condition_2048_upsert
               run:
@@ -110,13 +110,13 @@ microbenchmark:
                           count: 2048
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 3000000, 4000000 ]
+                                  params: [ 3000001, 4000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 3000000, 4000000 ]
+                                  params: [ 3000001, 4000000 ]
                               -   util: PrimaryStringGen
-                                  params: [ 3000000, 50 ]
+                                  params: [ 3000001, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 3000000, 4000000, 2 ]
+                                  params: [ 3000001, 4000000, 2 ]
 
             - workload: CW2_5_2column_condition_1_upsert_with_returning
               run:
@@ -127,13 +127,13 @@ microbenchmark:
                           count: 10
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 4000000, 5000000 ]
+                                  params: [ 4000001, 5000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 4000000, 5000000 ]
+                                  params: [ 4000001, 5000000 ]
                               -   util: PrimaryStringGen
-                                  params: [ 4000000, 50 ]
+                                  params: [ 4000001, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 4000000, 5000000, 2 ]
+                                  params: [ 4000001, 5000000, 2 ]
 
             - workload: CW2_6_4column_condition_1_upsert_with_returning
               run:
@@ -143,13 +143,13 @@ microbenchmark:
                         - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1, user_id_1, bal_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1) RETURNING *
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 5000000, 6000000 ]
+                                  params: [ 5000001, 6000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 5000000, 6000000 ]
+                                  params: [ 5000001, 6000000 ]
                               -   util: PrimaryStringGen
-                                  params: [ 5000000, 50 ]
+                                  params: [ 5000001, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 5000000, 6000000, 2 ]
+                                  params: [ 5000001, 6000000, 2 ]
 
             - workload: CW2_7_2column_condition_10values_in_1upsert_with_returning
               run:
@@ -247,13 +247,13 @@ microbenchmark:
                         - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1) DO UPDATE SET bal_1=accounts_1.bal_1+1 RETURNING *
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 5000000, 6000000 ]
+                                  params: [ 6000001, 7000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 5000000, 6000000 ]
+                                  params: [ 6000001, 7000000 ]
                               -   util: PrimaryStringGen
-                                  params: [ 5000000, 50 ]
+                                  params: [ 6000001, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 5000000, 6000000, 2 ]
+                                  params: [ 6000001, 7000000, 2 ]
 
             - workload: CW2_9_2column_condition_10_upsert_with_returning
               run:
@@ -264,10 +264,10 @@ microbenchmark:
                           count: 10
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 5000000, 6000000 ]
+                                  params: [ 7000001, 8000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 5000000, 6000000 ]
+                                  params: [ 7000001, 8000000 ]
                               -   util: PrimaryStringGen
-                                  params: [ 5000000, 50 ]
+                                  params: [ 7000001, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 5000000, 6000000, 2 ]
+                                  params: [ 7000001, 8000000, 2 ]
