--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/foreign_key_child_update.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/foreign_key_child_update.yaml
@@ -1,6 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:postgresql://127.0.0.1:5433/yugabyte
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: "yugabyte"
 password: "yugabyte"
 
