--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/foreign_key_unique_sec_index_ref.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/foreign_key_unique_sec_index_ref.yaml
@@ -25,9 +25,10 @@ microbenchmark:
             - DROP TABLE IF EXISTS employees_with_fk;
             - DROP TABLE IF EXISTS employees_without_fk;
             - DROP TABLE IF EXISTS projects;
-            - create table projects(id int primary key, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
+            - create table projects(id int primary key, uid int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
             - create table employees_with_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null);
             - create table employees_without_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null);
+            - create index projects_index on projects(uid);
         cleanup:
             - DROP TABLE IF EXISTS employees_with_fk;
             - DROP TABLE IF EXISTS employees_without_fk;
@@ -37,6 +38,9 @@ microbenchmark:
               rows: 100
               columns:
                   - name: id
+                    util: PrimaryIntGen
+                    params: [1, 100]
+                  - name: uid
                     util: PrimaryIntGen
                     params: [1, 100]
                   - name: name
@@ -103,7 +107,7 @@ microbenchmark:
                     params: [1,100]
 
         afterLoad:
-            - ALTER TABLE employees_with_fk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects(id);
+            - ALTER TABLE employees_with_fk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects(uid);
             
         executeRules:
             - workload: select_with_fk
@@ -123,8 +127,8 @@ microbenchmark:
                     queries:
                         - query: insert into employees_with_fk values(?,?,?,?,?,?,?);
                           bindings:
-                              - util: PrimaryIntGen
-                                params: [1001, 91000]
+                              - util: RandomInt
+                                params: [1001, 1100]
                               - util: RandomAString
                                 params: [1, 20]
                               - util: RandomAString
@@ -145,8 +149,8 @@ microbenchmark:
                     queries:
                         - query: update employees_with_fk set project_id=? where id=?;
                           bindings:
-                            - util: PrimaryIntGen
-                              params: [1001, 90000]
+                            - util: RandomInt
+                              params: [1, 100]
                             - util: RandomInt
                               params: [1, 1000]
 
@@ -167,8 +171,8 @@ microbenchmark:
                     queries:
                         - query: insert into employees_without_fk values(?,?,?,?,?,?,?);
                           bindings:
-                              - util: PrimaryIntGen
-                                params: [1001, 90000]
+                              - util: RandomInt
+                                params: [1001, 9000]
                               - util: RandomAString
                                 params: [1, 20]
                               - util: RandomAString
@@ -188,7 +192,7 @@ microbenchmark:
                     queries:
                         - query: update employees_without_fk set project_id=? where id=?;
                           bindings:
-                            - util: PrimaryIntGen
-                              params: [1001, 90000]
+                            - util: RandomInt
+                              params: [1, 100]
                             - util: RandomInt
                               params: [1, 1000]
